<resources>
    <string name="app_name">ForestOn</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Email">Email</string>
    <string name="Proveedor">Proveedor</string>
    <string name="contraseña">Contraseña</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="archivo_preferencias">com.example.foreston.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">747133306584352</string>
    <string name="fb_login_protocol_scheme">fb747133306584352</string>
    <string name="facebook_client_token">bc4d00513478cfb8b211b6ac5a1f908b</string>
    <string name="MisDatosTXT">Mis Datos Personales</string>
    <string name="UiDato">UID</string>
    <string name="Nombresdato">NOMBRES</string>
    <string name="Apellidodato">APELLIDOS</string>
    <string name="CorreoDato">CORREO</string>
    <string name="PasswordDato">PASSWORD</string>
    <string name="EdadDato">EDAD</string>
    <string name="DireccionDato">DIRECCION</string>
    <string name="TELEFONOdato">TELEFONO</string>
    <string name="botonActDa">Actualizar Datos</string>
    <string name="botonActPass">Actualizar Pass</string>
    <string name="Aceptar">Aceptar</string>
    <string name="SI">Sí</string>
    <string name="NO">No</string>
    <string-array name="especie_arbol">
        <item>Eucalipto - Eucalyptus Grandis</item>
        <item>Eucalipto - Eucalyptus Globulus</item>
        <item>Pino - Pinus ponderosa</item>
        <item>Álamo - Populus Simonii</item>
    </string-array>
    <string-array name="diametros_validos">
        <item>1 cm</item>
        <item>2 cm</item>
        <item>3 cm</item>
        <item>4 cm</item>
        <item>5 cm</item>
        <item>6 cm</item>
        <item>7 cm</item>
        <item>8 cm</item>
        <item>9 cm</item>
        <item>10 cm</item>
        <item>11 cm</item>
        <item>12 cm</item>
        <item>13 cm</item>
        <item>14 cm</item>
        <item>15 cm</item>
        <item>16 cm</item>
        <item>17 cm</item>
        <item>18 cm</item>
        <item>19 cm</item>
        <item>20 cm</item>
        <item>21 cm</item>
        <item>22 cm</item>
        <item>23 cm</item>
        <item>24 cm</item>
        <item>25 cm</item>
        <item>26 cm</item>
        <item>27 cm</item>
        <item>28 cm</item>
        <item>29 cm</item>
        <item>30 cm</item>
        <item>31 cm</item>
        <item>32 cm</item>
        <item>33 cm</item>
        <item>34 cm</item>
        <item>35 cm</item>
        <item>36 cm</item>
        <item>37 cm</item>
        <item>38 cm</item>
        <item>39 cm</item>
        <item>40 cm</item>
        <item>41 cm</item>
        <item>42 cm</item>
        <item>43 cm</item>
        <item>44 cm</item>
        <item>45 cm</item>
        <item>46 cm</item>
        <item>47 cm</item>
        <item>48 cm</item>
        <item>49 cm</item>
        <item>50 cm</item>
    </string-array>
    <string-array name="industria_destino">
        <item>Aserradero - En Monte en Pie</item>
        <item>Aserradero - En Playa de Monte</item>
        <item>Aserradero - En Playa de Monte - podado</item>
        <item>Aserradero - En Planta industrial</item>
        <item>Aserradero - En Planta industrial - podado</item>
        <item>Aserrin - En Planta industrial</item>
        <item>Celulosa (C. B. Sta Fe)</item>
        <item>Celulosa (Arauco Argentina SA)</item>
        <item>Chips - En Planta industrial</item>
        <item>Costanero - En Planta industrial</item>
        <item>Papelera (Papel Misionero SA)</item>
        <item>Rodrigones - En Playa de Monte</item>
        <item>Tutores - En Playa de Monte</item>
        <item>Tijeras - En Playa de Monte</item>
        <item>Viruta - En Planta industrial</item>
    </string-array>
    <string-array name="graficos">
        <item>Torta - Rentabilidad por industria</item>
        <item>Torta - Rentabilidad Porcentual</item>
        <item>Barras - Distribución E. Grandis</item>
        <item>Barras - Distribución E. Globulus</item>
        <item>Barras - Distribución total</item>
        <item>Radar - Distribución E. Grandis</item>
        <item>Radar - Distribución E. Globulus</item>
        <item>Radar - Distribución por especie</item>
        <item>Radar - Distribución Rentabilidad</item>
    </string-array>
    <string name="info_forestacion">La forestación es la conversión, por actividad humana directa, de tierras que carecían de bosque,
        durante un periodo de al menos 50 años, en tierras forestales mediante plantación, siembra o fomento antrópico de semilleros naturales.</string>
    <string name="info_reforestacion">Se considera reforestación la conversión por actividad humana directa de tierras no boscosas en boscosas mediante plantación,
        siembra o fomento antrópico de semilleros naturales, en tierras que estuvieron forestadas pero que actualmente están deforestadas. </string>
    <string name="info_papel_y_celulosa">Cuando hablamos de productos de papel y cartón, tenemos que diferenciar la producción de celulosa de la producción de papel.
        La celulosa es la fibra que se utiliza como materia prima para hacer papel y puede ser de origen forestal o vegetal. A su vez, el término “papel” engloba diferentes
        tipos que se clasifican en: \n
        - Culturales: diarios, libros y todo tipo de papeles para impresión y escritura.\n
        - Industriales: papeles para fabricar cartón corrugado, kraft, cartulina, impermeables, para embalaje.\n
        - Domésticos: papel tissue como papel higiénico, servilletas, rollos de cocina, pañuelos de papel.
    </string>
    <string name="info_celulosa">En Argentina se producen anualmente cerca de 900.000 toneladas de pasta celulósica de las cuales el 16% proviene de la caña de azúcar;
    el resto proviene de bosques implantados de pinos, eucaliptos, sauces y álamos.
        Partiendo de la madera, primero se separan las fibras (unidas por una especie de pegamento denominado lignina) “moliendo” la madera o
        disolviendo el pegamento con calor y productos químicos.
    </string>
    <string name="info_papel">El papel se fabrica con las fibras de celulosa que hay en la madera.
        Cuando esa fibra se utiliza por primera vez se llama fibra virgen y cuando a través del reciclaje la recuperamos y la volvemos a utilizar como materia prima para fabricación de papel la llamamos fibra reciclada.
        En Argentina se producen anualmente 1.762.000 toneladas de productos de papel, la cual utiliza como materia prima un 45% de celulosa y un 55% de papel que se recicla.
    </string>
    <string name="info_fibra_virgen">Siempre será necesario aportar una cierta cantidad de fibra virgen (materia prima nueva) al ciclo del papel.
        Se calcula que alrededor de un 19% del papel que utilizamos no puede recuperarse para el reciclaje debido a diversas causas.
        Por otra parte, la fibra de celulosa se va deteriorando a medida que se va utilizando.
        Hay además determinados usos para los cuales se necesitan ciertas características que sólo aporta la fibra virgen.
        Por todo ello, siempre será necesario añadir al ciclo del papel una cierta cantidad de fibra virgen.
    </string>
    <string name="maquina_de_papel">Para fabricar el papel, las fibras de celulosa -vírgenes o recicladas- se mezclan con agua en un gran recipiente llamado pulper,
        y esa mezcla pasa a la máquina papelera. En la máquina, la mezcla de agua y fibras se coloca sobre una larga banda conducida por rodillos.
        A continuación se va retirando el agua por varios procedimientos: gravedad, vacío, presión y secado.
        Y finalmente obtenemos una enorme hoja de papel, que se enrolla para formar una bobina.
    </string>
    <string name="mito_1">
        Mito: Para fabricar papel se destruyen bosques en Argentina.\n
        Realidad: De la misma manera que se planta maíz o trigo, luego se cosecha y se vuelve a plantar, también los árboles se plantan.
        Las empresas forestales tienen viveros donde cultivan los plantines que se transformarán en árboles.\n
    </string>
    <string name="mito_2">
        Mito: La deforestación aumenta en todo el mundo, estamos acabando con los bosques a causa del papel.\n
        Realidad: La mayor causa de deforestación en el mundo es el avance de la frontera agrícola.\n
        Los opositores dicen que los bosques implantados secarán las fuentes de agua, degradarán el suelo y serán susceptibles a las plagas y enfermedades.\n
        Sin embargo, ampliar la superficie forestada mediante bosques implantados presenta beneficios ambientales. Las plantaciones forestales fijan carbono, disminuyen
        el efecto invernadero, cuidan al suelo de la erosión y lo ayudan a conservar el agua, y además son refugio de la fauna.
    </string>
    <string name="mito_3">
        Mito: A nivel mundial el papel es un producto del pasado. Por ejemplo: en el futuro se va a leer y estudiar en forma digital.\n
        Realidad: A pesar de todos los pronósticos que le anunciaban el final al libro en papel, los adolescentes siguen eligiéndolo.
        La PC, el smartphone y la tablet crecen, pero se destinan a otros usos. El fenómeno es global,
        aun donde la accesibilidad económica a los dispositivos electrónicos es mayor.
        Los estudios demuestran que se sigue prefiriendo leer libros en papel.
        El Segundo Informe Anual de “Regreso a la Escuela” realizado por la Junta de Papel y Embalaje,
        que incluye encuestas a 4.300 estudiantes, padres y docentes en Estados Unidos,
        muestra que el papel no solo tiene un significativo rol en el aula, sino que su uso e importancia está creciendo.

    </string>
    <string name="Diseñar_Actividad">

        El /los Participantes del Proyecto (PP) diseñan una actividad que involucra la reducción o
absorción de gases de efecto invernadero (GEI).

    </string>
    <string name="Diseñar_PDD">

        El Documento de Diseño del Proyecto (PDD) es el documento oficial de la Convención
Marco de Cambio Climático de las Naciones Unidas (UNFCCC) para la presentación de
un proyecto MDL (Mecanismo para un Desarrollo Limpio).

    </string>
    <string name="AprobNac">

        La actividad MDL debe ser aprobada por escrito por la Autoridad Nacional Designada
(AND) de cada participante. La aprobación de la AND del país huésped incluye analizar la
contribución al desarrollo sustentable. El proyecto puede registrarse aún sin el apoyo de un
PP del Anexo I .
    </string>
    <string name="Validacion">
La validación es una evaluación independiente de la actividad del proyecto en base al PDD.
La realiza una Entidad Operacional Designada (EOD) registrada ante la JE.
    </string>
    <string name="Registro">
Es la aceptación formal de un proyecto validado como MDL. La Junta Ejecutiva del MDL
(JE) registra la actividad. El/los PP abonan un canon de registración.
    </string>
    <string name="Monitoreo">
Los PP recogen la información necesaria para calcular las reducciones o absorciones de GEI
que derivan del proyecto. Se observa el plan de monitoreo del PDD.
    </string>
    <string name="verificacion_certificacion">
La verificación es la revisión periódica independiente que lleva a cabo la EOD luego del
monitoreo. La certificación es la declaración escrita de la EOD respecto de las reducciones o
absorciones de GEI verificadas.
    </string>
    <string name="Emision">
La JE emite los Bonos equivalentes a las reducciones o absorciones verificadas. Se deducen
Bonos para aplicar a gastos administrativos y costos derivados de asistencia al cambio
climático en zonas vulnerables.
    </string>
    <string name="Distribucion">
Se distribuyen los Bonos de acuerdo con el pedido de los participantes del proyecto.
    </string>
</resources>