<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Certificación de Bonos de Carbono"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/contor_general"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/ivFoto2"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:background="@drawable/capturebonofinal2"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ciclobono"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:background="@drawable/capturebono10"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="1- Diseñar la Actividad del proyecto"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Diseñar_Actividad"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="2- Preparación del PDD"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Diseñar_PDD"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="3- Aprobación Nacional"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/AprobNac"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="4- Validación"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Validacion"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="5- Registro"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Registro"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="6- Monitoreo"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Monitoreo"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="7- Verificación y Certificación"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/verificacion_certificacion"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="8- Emisión de Bono"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Emision"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="9- Distribución de Bono"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/barra_menu"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Distribucion"/>

            <Space

                android:layout_width="match_parent"
                android:layout_height="10dp"
                tools:ignore="MissingConstraints"
                />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="CO2 absorbido por mis parcelas actualmente:"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/contor_general"
                android:textStyle="bold"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:id="@+id/spaceCO2"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    tools:ignore="MissingConstraints"
                    />

            <TextView
                android:id="@+id/co2personales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spaceCO2"
                android:textSize="40sp"
                android:layout_marginLeft="30dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/certCo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spaceCO2"
                app:layout_constraintStart_toEndOf="@id/co2personales"
                android:textSize="40sp"
                android:text=" Tn"
                android:textStyle="bold"
                tools:text=" Tn"
                tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>